--- a/web/static/partials/wizard-modal-add-template.html
+++ b/web/static/partials/wizard-modal-add-template.html
@@ -2,7 +2,7 @@
 <form class="form form-inline" enctype="multipart/form-data" id="template_upload_form">
     <div class="form-group" ng-model="install.templateData">
         <label for="new_template">{{'template_file'|translate}}:</label>
-        <input class="form-control" style="height: auto;" name="new_template_filename_wizard" id="new_template_filename_wizard" type="file">
+        <input class="form-control" name="new_template_filename_wizard" id="new_template_filename_wizard" type="file">
     </div>
 </form>
 
