--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -1168,72 +1168,128 @@ rect {
     color: #CCC;
 }
 
-.healthIcon {
-    -webkit-transform: scale(1.4, 1.4);
-    -moz-transform: scale(1.4, 1.4);
-    -ms-transform: scale(1.4, 1.4);
+
+.healthCheck {
+    border-radius: 50px;
+    background-color: #AAA;
+    position: relative;
+    height: 22px;
+    width: 22px;
+    overflow: hidden;
 }
-.healthIcon.good {
-    color: #0084DB;
+.healthCheck.wide {
+    width: 41px;
 }
-.healthIcon.unknown {
-    color: #94C0DB;
+.healthCheck.good {
+    background-color: #0084DB;
 }
-.healthIcon.disabled {
-    color: #AAA;
+.healthCheck.unknown{
+    background-color: #94C0DB;
+}
+.healthCheck.disabled {
+    background-color: #AAA;
     cursor: auto;
 }
-.healthIcon.bad {
-    color: #9C1200;
+.healthCheck.bad {
+    background-color: #9C1200;
 }
-.healthIcon.zoom {
+.healthCheck.zoom {
     animation: zoom .3s;
     -webkit-animation: zoom .3s;
     -moz-animation: zoom .3s;
 }
 @-webkit-keyframes zoom {
-    0% { -webkit-transform: scale(1.4, 1.4); }
-    50% { -webkit-transform: scale(2.4, 2.4); }
-    100% { -webkit-transform: scale(1.4, 1.4);  }
+    0% { -webkit-transform: scale(1, 1); }
+    50% { -webkit-transform: scale(1.5, 1.5); }
+    100% { -webkit-transform: scale(1, 1);  }
 }
 @-moz-keyframes zoom {
-    0% { -moz-transform: scale(1.4, 1.4); }
-    50% { -moz-transform: scale(2.4, 2.4); }
-    100% { -moz-transform: scale(1.4, 1.4);  }
+    0% { -moz-transform: scale(1, 1); }
+    50% { -moz-transform: scale(1.5, 1.5); }
+    100% { -moz-transform: scale(1, 1);  }
 }
 
 @keyframes zoom {
-    0% { transform: scale(1.4, 1.4); }
-    50% { transform: scale(2.4, 2.4); }
-    100% { transform: scale(1.4, 1.4);  }
+    0% { transform: scale(1, 1); }
+    50% { transform: scale(1.5, 1.5); }
+    100% { transform: scale(1, 1);  }
 }
 
-.healthIconScaler {
-    display: inline-block;
-    -webkit-transform: scale(.6, .6);
-    -moz-transform: scale(.6, .6);
-    -ms-transform: scale(.6, .6);
+.healthCheck {
+    transition: width .5s;
 }
-.healthIconScaler .healthIcon {
-    top: 5px;
+
+
+.healthIcon {
+    font-size: 22px;
+    position: absolute;
+    top: -2px;
+    left: 0px;
+}
+.healthIconBG {
+    width: 14px;
+    height: 14px;
+    position: absolute;
+    background-color: white;
+    top: 4px;
+    left: 4px;
+    border-radius: 50%;
+}
+.healthIconBadge {
+    color: white;
+    font-size: .7em;
+    font-weight: bold;
+    display: inline-block;
+    vertical-align: top;
+    position: absolute;
+    top: 4px;
+    left: 20px;
+    cursor: default;
+}
+
+/* NOTE: hardcoding glyphicon glyphs here to make CSS simpler.
+ * Changes to glyphicons or angular could cause this to break */
+.good .healthIcon:before{
+    color: #0084DB;
+    content: "\e084";
+}
+.bad .healthIcon:before{
+    color: #9C1200;
+    content: "\e101";
+}
+.unknown .healthIcon:before{
+    color: #94C0DB;
+    content: "\e085";
+}
+.down .healthIcon:before{
+    color: #AAA;
+    content: "\e082";
 }
 
 .healthTooltipDetailRow {
-    font-size: .9em;
+    position: relative;
+    font-size: 12px;
 }
-.healthTooltipDetailRow .healthTooltipDetailName,
-.healthTooltipDetailRow .healthIcon {
+.healthTooltipDetailRow .healthTooltipDetailName {
     display: inline-block;
 }
 .healthTooltipDetailRow .healthIcon {
-    -webkit-transform: scale(1, 1);
-    -moz-transform: scale(1, 1);
-    -ms-transform: scale(1, 1);
+    top: 1px;
+    font-size: 15px;
 }
 .healthTooltipDetailRow .healthTooltipDetailName {
-    margin-left: 10px;
+    padding-left: 18px;
 }
 
+h3 .healthCheck {
+    top: 4px;
+}
+h3 .healthIconBadge {
+    top: 6px;
+}
+h3 .healthTooltipDetailRow {
+    padding-bottom: 2px;
+}
 
 /* chart styles */
 .nv-axis .tick text,
